2013-12-21  Araki Ken  <arakiken@users.sf.net>

	* ml_line.c: Segfault caused by zero column characters like 0x200e is fixed.

2013-12-19  Araki Ken  <arakiken@users.sf.net>

	* x_display_wscons.c: The palette of 4bpp framebuffer is initialized
	  to monochrome if --depth 1 option is specified.

	* fb/x_display.c: put_image_124bpp() is fixed.

	* c_imagelib.c, fb/x_imagelib.c, fb/x_display.c:
	  If the value of "use_ansi_colors" option is false on 4bpp framebuffer,
	  the colors used by the wall picture are set to framebuffer palette
	  by x_display_set_use_ansi_colors() and x_display_set_cmap().

	* win32/x_window.c: Fix error check of OpenClipboard().

	* x_main_config.c: Even if the default value is specified for "use_urgent_bell",
	  "exit_backscroll_by_pty", "allow_change_shortcut", "allow_scp", "use_clipboard",
	  "use_alt_buffer", "use_ansi_colors" and "leftward_double_drawing", it is applied.

2013-12-18  Araki Ken  <arakiken@users.sf.net>

	* fb/x_display.c: Fix the 4 bpp specific bug.

2013-12-18  Araki Ken  <arakiken@users.sf.net>

	* fb/x_display.c: Fix typo.

	* mlimgloader/gdk-pixbuf.c:
	  It is possible to convert image format by mlimgloader [windowid] [width]
	  [height] [src path] [dst path].

2013-12-17  Araki Ken  <arakiken@users.sf.net>

	* doc/en/README.win32, doc/ja/README.win32: Updated.

	* doc/en/README.ssh, doc/ja/README.ssh: Added.

	* libptyssh/ml_pty_ssh.c:
	  Agent authentication is tried only if no password is specified.

2013-12-15  Araki Ken  <arakiken@users.sf.net>

	* x_font_ft.c: FC_CHAR_WIDTH is not used for US-ASCII font on xft.

2013-12-15  Araki Ken  <arakiken@users.sf.net>

	* ml_vt100_parser.c: U+2580 - U+259f is never Embolded by double drawing.

	* man/mlterm.1, README.ja, etc/main, etc/main.ja: Updated.

	* fb/x_font.c, fb/x_window.c, x_font_ft.c, x_window_cairo.c,
	  x_window_xft.c, win32/x_font.c, win32/x_window.c, xlib/x_font.c,
	  xlib/x_window.c, x_font_cache.[ch], x_font.h, x_main_config.c: